--- a/prepros.cfg
+++ b/prepros.cfg
@@ -35,6 +35,32 @@
           "height": 0,
           "width": 0
         },
+        "49530399": {
+          "id": "49530399",
+          "path": "images/sp-3.2x.png",
+          "output": "images/sp-3.2x.png",
+          "name": "sp-3.2x.png",
+          "category": "IMAGE",
+          "size": 8549,
+          "type": "png",
+          "initialSize": 8549,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "53609572": {
+          "id": "53609572",
+          "path": "images/sp-1.png",
+          "output": "images/sp-1.png",
+          "name": "sp-1.png",
+          "category": "IMAGE",
+          "size": 5586,
+          "type": "png",
+          "initialSize": 5586,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "61173175": {
           "id": "61173175",
           "path": "images/del/channel-1.png",
@@ -76,6 +102,19 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "67132306": {
+          "id": "67132306",
+          "path": "images/sp-2.2x.png",
+          "output": "images/sp-2.2x.png",
+          "name": "sp-2.2x.png",
+          "category": "IMAGE",
+          "size": 10479,
+          "type": "png",
+          "initialSize": 10479,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         },
         "88354724": {
           "id": "88354724",
@@ -3313,6 +3352,123 @@
           "size": 3464,
           "type": "png",
           "initialSize": 3464,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c0320055": {
+          "id": "c0320055",
+          "path": "images/p-feature-4.png",
+          "output": "images/p-feature-4.png",
+          "name": "p-feature-4.png",
+          "category": "IMAGE",
+          "size": 2131,
+          "type": "png",
+          "initialSize": 2131,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9ea1fdd1": {
+          "id": "9ea1fdd1",
+          "path": "images/p-feature-4.2x.png",
+          "output": "images/p-feature-4.2x.png",
+          "name": "p-feature-4.2x.png",
+          "category": "IMAGE",
+          "size": 3581,
+          "type": "png",
+          "initialSize": 3581,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4f513ab8": {
+          "id": "4f513ab8",
+          "path": "images/aon.png",
+          "output": "images/aon.png",
+          "name": "aon.png",
+          "category": "IMAGE",
+          "size": 2226,
+          "type": "png",
+          "initialSize": 2226,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e5413eab": {
+          "id": "e5413eab",
+          "path": "images/aon.2x.png",
+          "output": "images/aon.2x.png",
+          "name": "aon.2x.png",
+          "category": "IMAGE",
+          "size": 3968,
+          "type": "png",
+          "initialSize": 3968,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d4dfb0ac": {
+          "id": "d4dfb0ac",
+          "path": "images/sp-1.2x.png",
+          "output": "images/sp-1.2x.png",
+          "name": "sp-1.2x.png",
+          "category": "IMAGE",
+          "size": 10672,
+          "type": "png",
+          "initialSize": 10672,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e925ab7c": {
+          "id": "e925ab7c",
+          "path": "images/sp-2.png",
+          "output": "images/sp-2.png",
+          "name": "sp-2.png",
+          "category": "IMAGE",
+          "size": 5579,
+          "type": "png",
+          "initialSize": 5579,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e6efc5e3": {
+          "id": "e6efc5e3",
+          "path": "images/sp-3.png",
+          "output": "images/sp-3.png",
+          "name": "sp-3.png",
+          "category": "IMAGE",
+          "size": 4752,
+          "type": "png",
+          "initialSize": 4752,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0dbbc8ea": {
+          "id": "0dbbc8ea",
+          "path": "images/modem.png",
+          "output": "images/modem.png",
+          "name": "modem.png",
+          "category": "IMAGE",
+          "size": 59649,
+          "type": "png",
+          "initialSize": 59649,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0e212090": {
+          "id": "0e212090",
+          "path": "images/modem.2x.png",
+          "output": "images/modem.2x.png",
+          "name": "modem.2x.png",
+          "category": "IMAGE",
+          "size": 167141,
+          "type": "png",
+          "initialSize": 167141,
           "optimized": false,
           "height": 0,
           "width": 0
