--- a/prepros.cfg
+++ b/prepros.cfg
@@ -3472,6 +3472,433 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "0c11a071": {
+          "id": "0c11a071",
+          "path": "movies.html",
+          "output": "movies.html",
+          "name": "movies.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "2dfabc74": {
+          "id": "2dfabc74",
+          "path": "images/example-movie.jpg",
+          "output": "images/example-movie.jpg",
+          "name": "example-movie.jpg",
+          "category": "IMAGE",
+          "size": 54019,
+          "type": "jpg",
+          "initialSize": 54019,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "95039e6e": {
+          "id": "95039e6e",
+          "path": "images/example-movie.2x.jpg",
+          "output": "images/example-movie.2x.jpg",
+          "name": "example-movie.2x.jpg",
+          "category": "IMAGE",
+          "size": 135800,
+          "type": "jpg",
+          "initialSize": 135800,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "aa00f4f6": {
+          "id": "aa00f4f6",
+          "path": "images/re.png",
+          "output": "images/re.png",
+          "name": "re.png",
+          "category": "IMAGE",
+          "size": 1179,
+          "type": "png",
+          "initialSize": 1179,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "78de02cc": {
+          "id": "78de02cc",
+          "path": "images/re.2x.png",
+          "output": "images/re.2x.png",
+          "name": "re.2x.png",
+          "category": "IMAGE",
+          "size": 1434,
+          "type": "png",
+          "initialSize": 1434,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "f0a5074c": {
+          "id": "f0a5074c",
+          "path": "images/mgprev.png",
+          "output": "images/mgprev.png",
+          "name": "mgprev.png",
+          "category": "IMAGE",
+          "size": 1385,
+          "type": "png",
+          "initialSize": 1385,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6b3b7ed2": {
+          "id": "6b3b7ed2",
+          "path": "images/mg-prev.2x.png",
+          "output": "images/mg-prev.2x.png",
+          "name": "mg-prev.2x.png",
+          "category": "IMAGE",
+          "size": 1686,
+          "type": "png",
+          "initialSize": 1686,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "77cdb710": {
+          "id": "77cdb710",
+          "path": "images/mg-next.png",
+          "output": "images/mg-next.png",
+          "name": "mg-next.png",
+          "category": "IMAGE",
+          "size": 1387,
+          "type": "png",
+          "initialSize": 1387,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "adeb30c2": {
+          "id": "adeb30c2",
+          "path": "images/mg-next.2x.png",
+          "output": "images/mg-next.2x.png",
+          "name": "mg-next.2x.png",
+          "category": "IMAGE",
+          "size": 1684,
+          "type": "png",
+          "initialSize": 1684,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "07408945": {
+          "id": "07408945",
+          "path": "images/example-movie-2.jpg",
+          "output": "images/example-movie-2.jpg",
+          "name": "example-movie-2.jpg",
+          "category": "IMAGE",
+          "size": 99389,
+          "type": "jpg",
+          "initialSize": 99389,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "3da0405f": {
+          "id": "3da0405f",
+          "path": "images/example-movie-2.2x.jpg",
+          "output": "images/example-movie-2.2x.jpg",
+          "name": "example-movie-2.2x.jpg",
+          "category": "IMAGE",
+          "size": 272963,
+          "type": "jpg",
+          "initialSize": 272963,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "94ff6b00": {
+          "id": "94ff6b00",
+          "path": "images/premiere.png",
+          "output": "images/premiere.png",
+          "name": "premiere.png",
+          "category": "IMAGE",
+          "size": 4687,
+          "type": "png",
+          "initialSize": 4687,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0b76b2c1": {
+          "id": "0b76b2c1",
+          "path": "images/premiere.2x.png",
+          "output": "images/premiere.2x.png",
+          "name": "premiere.2x.png",
+          "category": "IMAGE",
+          "size": 8331,
+          "type": "png",
+          "initialSize": 8331,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "63287d93": {
+          "id": "63287d93",
+          "path": "images/play.png",
+          "output": "images/play.png",
+          "name": "play.png",
+          "category": "IMAGE",
+          "size": 1834,
+          "type": "png",
+          "initialSize": 1834,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9b07401d": {
+          "id": "9b07401d",
+          "path": "images/play.2x.png",
+          "output": "images/play.2x.png",
+          "name": "play.2x.png",
+          "category": "IMAGE",
+          "size": 2865,
+          "type": "png",
+          "initialSize": 2865,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "43b0b3ed": {
+          "id": "43b0b3ed",
+          "path": "images/example-movie-3.jpg",
+          "output": "images/example-movie-3.jpg",
+          "name": "example-movie-3.jpg",
+          "category": "IMAGE",
+          "size": 278135,
+          "type": "jpg",
+          "initialSize": 278135,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "16dd3107": {
+          "id": "16dd3107",
+          "path": "images/example-movie-3.2x.jpg",
+          "output": "images/example-movie-3.2x.jpg",
+          "name": "example-movie-3.2x.jpg",
+          "category": "IMAGE",
+          "size": 841337,
+          "type": "jpg",
+          "initialSize": 841337,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d1184558": {
+          "id": "d1184558",
+          "path": "images/arrow-prev.png",
+          "output": "images/arrow-prev.png",
+          "name": "arrow-prev.png",
+          "category": "IMAGE",
+          "size": 1079,
+          "type": "png",
+          "initialSize": 1079,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "dbd628cc": {
+          "id": "dbd628cc",
+          "path": "images/arrow-prev.2x.png",
+          "output": "images/arrow-prev.2x.png",
+          "name": "arrow-prev.2x.png",
+          "category": "IMAGE",
+          "size": 1155,
+          "type": "png",
+          "initialSize": 1155,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0c411ce3": {
+          "id": "0c411ce3",
+          "path": "images/arrow-next.png",
+          "output": "images/arrow-next.png",
+          "name": "arrow-next.png",
+          "category": "IMAGE",
+          "size": 976,
+          "type": "png",
+          "initialSize": 976,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "23f1f411": {
+          "id": "23f1f411",
+          "path": "images/arrow-next.2x.png",
+          "output": "images/arrow-next.2x.png",
+          "name": "arrow-next.2x.png",
+          "category": "IMAGE",
+          "size": 1143,
+          "type": "png",
+          "initialSize": 1143,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "92a48a92": {
+          "id": "92a48a92",
+          "path": "images/clock.png",
+          "output": "images/clock.png",
+          "name": "clock.png",
+          "category": "IMAGE",
+          "size": 1211,
+          "type": "png",
+          "initialSize": 1211,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c5333815": {
+          "id": "c5333815",
+          "path": "images/clock.2x.png",
+          "output": "images/clock.2x.png",
+          "name": "clock.2x.png",
+          "category": "IMAGE",
+          "size": 1567,
+          "type": "png",
+          "initialSize": 1567,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "8bc328a8": {
+          "id": "8bc328a8",
+          "path": "images/kinopoisk.png",
+          "output": "images/kinopoisk.png",
+          "name": "kinopoisk.png",
+          "category": "IMAGE",
+          "size": 1888,
+          "type": "png",
+          "initialSize": 1888,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6549a9d1": {
+          "id": "6549a9d1",
+          "path": "images/kinopoisk.2x.png",
+          "output": "images/kinopoisk.2x.png",
+          "name": "kinopoisk.2x.png",
+          "category": "IMAGE",
+          "size": 3056,
+          "type": "png",
+          "initialSize": 3056,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "929fea13": {
+          "id": "929fea13",
+          "path": "images/rating-star.png",
+          "output": "images/rating-star.png",
+          "name": "rating-star.png",
+          "category": "IMAGE",
+          "size": 1184,
+          "type": "png",
+          "initialSize": 1184,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b27cecc9": {
+          "id": "b27cecc9",
+          "path": "images/rating-star.2x.png",
+          "output": "images/rating-star.2x.png",
+          "name": "rating-star.2x.png",
+          "category": "IMAGE",
+          "size": 1461,
+          "type": "png",
+          "initialSize": 1461,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "199ccea9": {
+          "id": "199ccea9",
+          "path": "images/rating-star-null.png",
+          "output": "images/rating-star-null.png",
+          "name": "rating-star-null.png",
+          "category": "IMAGE",
+          "size": 1254,
+          "type": "png",
+          "initialSize": 1254,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bacd4d19": {
+          "id": "bacd4d19",
+          "path": "images/rating-star-null.2x.png",
+          "output": "images/rating-star-null.2x.png",
+          "name": "rating-star-null.2x.png",
+          "category": "IMAGE",
+          "size": 1655,
+          "type": "png",
+          "initialSize": 1655,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "fddb5988": {
+          "id": "fddb5988",
+          "path": "images/imdb.png",
+          "output": "images/imdb.png",
+          "name": "imdb.png",
+          "category": "IMAGE",
+          "size": 2178,
+          "type": "png",
+          "initialSize": 2178,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "aacd4c91": {
+          "id": "aacd4c91",
+          "path": "images/imdb.2x.png",
+          "output": "images/imdb.2x.png",
+          "name": "imdb.2x.png",
+          "category": "IMAGE",
+          "size": 3778,
+          "type": "png",
+          "initialSize": 3778,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ba033096": {
+          "id": "ba033096",
+          "path": "images/flag.png",
+          "output": "images/flag.png",
+          "name": "flag.png",
+          "category": "IMAGE",
+          "size": 1030,
+          "type": "png",
+          "initialSize": 1030,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "cdb67d62": {
+          "id": "cdb67d62",
+          "path": "images/flag.2x.png",
+          "output": "images/flag.2x.png",
+          "name": "flag.2x.png",
+          "category": "IMAGE",
+          "size": 1088,
+          "type": "png",
+          "initialSize": 1088,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
