--- a/prepros.cfg
+++ b/prepros.cfg
@@ -116,6 +116,19 @@
           "height": 0,
           "width": 0
         },
+        "84745139": {
+          "id": "84745139",
+          "path": "images/search.png",
+          "output": "images/search.png",
+          "name": "search.png",
+          "category": "IMAGE",
+          "size": 1262,
+          "type": "png",
+          "initialSize": 1262,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "88354724": {
           "id": "88354724",
           "path": "channels.html",
@@ -3896,6 +3909,71 @@
           "size": 1088,
           "type": "png",
           "initialSize": 1088,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "8bc7e344": {
+          "id": "8bc7e344",
+          "path": "images/search.2x.png",
+          "output": "images/search.2x.png",
+          "name": "search.2x.png",
+          "category": "IMAGE",
+          "size": 1992,
+          "type": "png",
+          "initialSize": 1992,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1ed0f0c5": {
+          "id": "1ed0f0c5",
+          "path": "images/search-focus.png",
+          "output": "images/search-focus.png",
+          "name": "search-focus.png",
+          "category": "IMAGE",
+          "size": 1275,
+          "type": "png",
+          "initialSize": 1275,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b33cadd0": {
+          "id": "b33cadd0",
+          "path": "images/search-focus.2x.png",
+          "output": "images/search-focus.2x.png",
+          "name": "search-focus.2x.png",
+          "category": "IMAGE",
+          "size": 2051,
+          "type": "png",
+          "initialSize": 2051,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "cf03aee8": {
+          "id": "cf03aee8",
+          "path": "images/select.png",
+          "output": "images/select.png",
+          "name": "select.png",
+          "category": "IMAGE",
+          "size": 1059,
+          "type": "png",
+          "initialSize": 1059,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "89cf64e9": {
+          "id": "89cf64e9",
+          "path": "images/select.2x.png",
+          "output": "images/select.2x.png",
+          "name": "select.2x.png",
+          "category": "IMAGE",
+          "size": 1240,
+          "type": "png",
+          "initialSize": 1240,
           "optimized": false,
           "height": 0,
           "width": 0
