--- a/prepros.cfg
+++ b/prepros.cfg
@@ -3977,6 +3977,32 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "945b516d": {
+          "id": "945b516d",
+          "path": "images/playtv.2x.png",
+          "output": "images/playtv.2x.png",
+          "name": "playtv.2x.png",
+          "category": "IMAGE",
+          "size": 53748,
+          "type": "png",
+          "initialSize": 53748,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "08aabd01": {
+          "id": "08aabd01",
+          "path": "images/playtv.png",
+          "output": "images/playtv.png",
+          "name": "playtv.png",
+          "category": "IMAGE",
+          "size": 20426,
+          "type": "png",
+          "initialSize": 20426,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
