Правки адаптивной версии

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -4003,6 +4003,152 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "e7162f4a": {
+          "id": "e7162f4a",
+          "path": "images/ny_pattern.jpg",
+          "output": "images/ny_pattern.jpg",
+          "name": "ny_pattern.jpg",
+          "category": "IMAGE",
+          "size": 75415,
+          "type": "jpg",
+          "initialSize": 75415,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4bb6043b": {
+          "id": "4bb6043b",
+          "path": "images/ny_top.jpg",
+          "output": "images/ny_top.jpg",
+          "name": "ny_top.jpg",
+          "category": "IMAGE",
+          "size": 33597,
+          "type": "jpg",
+          "initialSize": 33597,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "062893fd": {
+          "id": "062893fd",
+          "path": "images/onlime-hny.jpg",
+          "output": "images/onlime-hny.jpg",
+          "name": "onlime-hny.jpg",
+          "category": "IMAGE",
+          "size": 315066,
+          "type": "jpg",
+          "initialSize": 315066,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bdbd7818": {
+          "id": "bdbd7818",
+          "path": "images/snow_bottom_0.png",
+          "output": "images/snow_bottom_0.png",
+          "name": "snow_bottom_0.png",
+          "category": "IMAGE",
+          "size": 31607,
+          "type": "png",
+          "initialSize": 31607,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d46d060a": {
+          "id": "d46d060a",
+          "path": "images/snow_bottom_1.png",
+          "output": "images/snow_bottom_1.png",
+          "name": "snow_bottom_1.png",
+          "category": "IMAGE",
+          "size": 22354,
+          "type": "png",
+          "initialSize": 22354,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0f88f1d5": {
+          "id": "0f88f1d5",
+          "path": "images/snow_bottom_2.png",
+          "output": "images/snow_bottom_2.png",
+          "name": "snow_bottom_2.png",
+          "category": "IMAGE",
+          "size": 49801,
+          "type": "png",
+          "initialSize": 49801,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "97d2a912": {
+          "id": "97d2a912",
+          "path": "images/snow_top.png",
+          "output": "images/snow_top.png",
+          "name": "snow_top.png",
+          "category": "IMAGE",
+          "size": 25085,
+          "type": "png",
+          "initialSize": 25085,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "167f2e5c": {
+          "id": "167f2e5c",
+          "path": "css/animations.css",
+          "output": "css/animations-dist.css",
+          "name": "animations.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "835761c7": {
+          "id": "835761c7",
+          "path": "images/wot2.png",
+          "output": "images/wot2.png",
+          "name": "wot2.png",
+          "category": "IMAGE",
+          "size": 2679,
+          "type": "png",
+          "initialSize": 2679,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b9e03fa4": {
+          "id": "b9e03fa4",
+          "path": "images/onlime_benefit_05.png",
+          "output": "images/onlime_benefit_05.png",
+          "name": "onlime_benefit_05.png",
+          "category": "IMAGE",
+          "size": 353,
+          "type": "png",
+          "initialSize": 353,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "33d28206": {
+          "id": "33d28206",
+          "path": "images/onlime_benefit_06.png",
+          "output": "images/onlime_benefit_06.png",
+          "name": "onlime_benefit_06.png",
+          "category": "IMAGE",
+          "size": 367,
+          "type": "png",
+          "initialSize": 367,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
